2004-10-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b238

	* Change: Extra security for sessions.
	  When the initial session is created, we store the REMOTE_ADDR
	  taken from the server, on each load, we compare the stored address
	  against the information in the current request.  If the address
	  has changed, we die with an attempted security breach.  This prevents
	  hijacking of sessions simply by knowing/sniffing the PHPSESSID from
	  cookies.

	* Change: Use !empty() instead of "sizeof() > 1" in ml_pulldown

2004-10-18  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b237

	* Fix: Modified Skins to look better in rtl languages. Fixes partly bug #869641.
	
2004-10-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b236

	* Fix: Add useLoad to getRequestVar in rename_album

2004-10-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b235

	* Fix: initLanguage does need to be called early, so I've added
	  some extra logic to prevent the functions from being initialized
	  multiple times, so that we can call it later to pick up user prefs

2004-10-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b234

	* Fix: Comparison typo

2004-10-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b233

	* Fix: Config wizard properly handles smtpPassword now.  Previously,
	  password values were never saved in the config file, so this was an
	  unseen case.

2004-10-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b232

	* Fix: Tested and fixed SMTP code

	* Fix: Prevention of bare linefeeds in email messages, which could
	  cause errors with strict MTAs.

2004-10-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b231

	* Bug 1048609: Escape "&" in navigator URLs

	* Fix: Modify getParentAlbums() so that array_reverse() isn't used -
	  it caused failures when any of the album names contained only
	  numbers - it would reset them to a zero-based incremental,
	  thinking that they were array refs, not strings.
