@@ -1,3 +1,10 @@
+2004-10-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b239
+
+	* Change: Present a URL to re-login if a session hijack is detected
+
+	* Change: Don't detect a hijack if there is no remoteHost defined
+	  in the session (upgrade scenario)
+
 2004-10-18  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b238
 
 	* Change: Extra security for sessions.
